--- a/src/Inceptum.AppServer.Sdk.Cqrs/packages.config
+++ b/src/Inceptum.AppServer.Sdk.Cqrs/packages.config
@@ -4,15 +4,15 @@
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net45" />
   <package id="CommonDomain" version="1.6.0.3" targetFramework="net45" />
   <package id="EventStore.Client" version="2.0.2" targetFramework="net45" />
-  <package id="Inceptum.Cqrs" version="1.0.7.20" targetFramework="net45" allowedVersions="[1.0.7.20,1.0.10.0)" />
-  <package id="Inceptum.Messaging" version="1.0.8.11" targetFramework="net45" />
-  <package id="Inceptum.Messaging.RabbitMq" version="1.0.8.11" targetFramework="net45" />
+  <package id="Inceptum.Messaging" version="2.1.0.5" targetFramework="net461" allowedVersions="[1.0.8.11,2.1.1.0)" />
+  <package id="Inceptum.Messaging.RabbitMq" version="2.1.0.5" targetFramework="net461" allowedVersions="[1.0.8.11,2.1.1.0)" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net461" />
   <package id="NEventStore" version="4.1.0.10" targetFramework="net45" />
   <package id="NEventStore.Serialization.Json" version="4.1.0.10" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="NLog" version="4.2.3" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
-  <package id="RabbitMQ.Client" version="3.2.4" targetFramework="net45" />
+  <package id="RabbitMQ.Client" version="5.0.1" targetFramework="net461" />
   <package id="Rx-Core" version="2.2.2" targetFramework="net45" />
   <package id="Rx-Interfaces" version="2.2.2" targetFramework="net45" />
   <package id="Rx-Linq" version="2.2.2" targetFramework="net45" />
