--- a/src/Inceptum.AppServer.Sdk.Cqrs/packages.config
+++ b/src/Inceptum.AppServer.Sdk.Cqrs/packages.config
@@ -4,6 +4,7 @@
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net45" />
   <package id="CommonDomain" version="1.6.0.3" targetFramework="net45" />
   <package id="EventStore.Client" version="2.0.2" targetFramework="net45" />
+  <package id="Inceptum.Cqrs" version="1.0.9.19" targetFramework="net461" />
   <package id="Inceptum.Messaging" version="2.1.0.5" targetFramework="net461" allowedVersions="[1.0.8.11,2.1.1.0)" />
   <package id="Inceptum.Messaging.RabbitMq" version="2.1.0.5" targetFramework="net461" allowedVersions="[1.0.8.11,2.1.1.0)" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net461" />
